--- a/src/main/resources/templates/Reservation.html
+++ b/src/main/resources/templates/Reservation.html
@@ -128,6 +128,13 @@
                                     </div>
                                     <div class="form-group" id="pnlSelRoom">
                                     </div>
+                                    <div class="form-group">
+                                        <select class='form-control rounded-0 border-top-0 border-right-0 border-left-0' id="select-status">
+                                            <option value="">Estado...</option>
+                                            <option value="1">completado</option>
+                                            <option value="2">cancelado</option>
+                                        </select>
+                                    </div>
                                     <div class="form-group mb-0">
                                         <button id="btnAgregar" onclick="agregarReserva();"
                                                 class="btn rounded-0 d-block ml-auto tm-btn-primary">
