--- a/src/main/resources/templates/Reservation.html
+++ b/src/main/resources/templates/Reservation.html
@@ -131,8 +131,8 @@
                                     <div class="form-group">
                                         <select class='form-control rounded-0 border-top-0 border-right-0 border-left-0' id="select-status">
                                             <option value="">Estado...</option>
-                                            <option value="1">completado</option>
-                                            <option value="2">cancelado</option>
+                                            <option value="completed">Completado</option>
+                                            <option value="cancelled">Cancelado</option>
                                         </select>
                                     </div>
                                     <div class="form-group mb-0">
